src/containers/game.css
.game {
  box-sizing: border-box;
  padding: 40px 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}
.game_details {
  height: 490px;
  width: 100%;
  margin-bottom: 20px;
}
.game_details > h1 {
  z-index: 2;
  position: relative;
  font-size: 35px;
  color: white;
  margin-bottom: 40px;
  width: max-content;
}
.game_details > h1::before {
  z-index: -4;
  position: absolute;
  content: "";
  width: 55%;
  height: 8px;
  background-color: var(--gamepad-red);
  bottom: 0px;
  left: 0;
}
.game_details .game_info {
  display: flex;
  width: 100%;
  height: 400px;
}
.game_details .game_info > div {
  width: 50%;
  height: 100%;
  box-sizing: border-box;
}
.game_details .game_info .info_col_1 {
  border-radius: 20px;
  overflow: hidden;
  background-color: tomato;
}
.game_details .game_info .info_col_1 img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.game_details .game_info .info_col_2 {
  padding-left: 20px;
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  padding-right: 20px;
}
.game_details .game_info .info_col_2_line_1 {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  width: 100%;
  margin-bottom: 20px;
}
.game_details .game_info .info_col_2_line_1 > div {
  height: 50px;
  width: max-content;
  border-radius: 10px;
  border: 1px solid white;
  padding: 5px 10px;
  margin-right: 15px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  cursor: pointer;
}
.game_details .game_info .info_col_2_line_1 > div:hover {
  background-color: rgb(95, 95, 95);
}
.game_details .game_info .info_col_2_line_1 span {
  margin-right: 5px;
}
.game_details .game_info .info_col_2_line_1 p {
  margin-bottom: 7px;
}
.game_details .game_info .info_col_2 h2 {
  margin-bottom: 8px;
  font-size: 14px;
  color: gray;
}
.game_details .game_info .info_col_2 p {
  color: white;
  line-height: 1.3rem;
}
.green {
  color: rgb(20, 167, 20);
}
.info_col_2_other_lines {
  display: flex;
  width: 100%;
}
.info_col_2_other_lines p {
  margin-bottom: 20px;
}
.info_col_2_other_lines_col_1,
.info_col_2_other_lines_col_2 {
  width: 50%;
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
}
.game_details .game_info .info_col_2 .info_about {
  text-overflow: ellipsis;
  word-wrap: break-word;
  max-height: 3.6rem;
  line-height: 1.2rem;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.game_details .game_info .info_col_2 .platforms {
  margin-right: 5px;
}

/*//////////// GAMES LIKE ////////////*/
.arrow-left,
.arrow-right {
  z-index: 150;
  display: none;
  position: absolute;
  color: #fff;
  border: 2px solid white;
  border-radius: 50%;
  padding: 10px;
  top: 250px;
}
.arrow-left {
  left: 0;
}
.arrow-right {
  right: 0;
}
.games_like {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.games_like h1 {
  z-index: 2;
  margin-bottom: 40px;
  font-size: 30px;
  color: #fff;
  position: relative;
  z-index: 10;
  width: max-content;
}

.games_like h1::before {
  z-index: -2;
  position: absolute;
  content: "";
  width: 55%;
  height: 8px;
  background-color: var(--gamepad-red);
  bottom: 0px;
  left: 0;
}
.game_like_ame_cards {
  width: 100%;
  flex-wrap: wrap;
  display: flex;
  align-items: center;
  justify-content: center;
}
.game_like_ame_cards a {
  flex: 1;
}
.game_like_ame_cards_card {
  position: relative;
  width: 95%;
  height: 300px;
  background-color: tomato;
  margin-right: 20px;
  border-radius: 20px;
  overflow: hidden;
}
.game_like_ame_cards_card:hover {
  box-shadow: 0 0 10px var(--gamepad-red);
  transform: scale(1.01);
}
.game_like_ame_cards_card img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.game_like_ame_cards_card .card_text {
  position: absolute;
  bottom: 0;
  left: 0;
  height: 40px;
  width: 95%;
  padding: 0 5px;
  font-size: large;
}
.game_like_ame_cards_card .card_title {
  color: #fff;
}
.game_reviews {
  width: 90%;
  display: flex;
  align-items: center;
  flex-direction: column;
}
.game_reviews h1 {
  text-align: center;
  margin-top: 50px;
  z-index: 2;
  margin-bottom: 40px;
  font-size: 30px;
  color: #fff;
  position: relative;
  z-index: 10;
  width: max-content;
}
.game_reviews > h2 {
  padding-left: 90px;
  font-size: 30px;
  width: 100%;
  color: #fff;
}
.game_reviews h1 .game_reviews_count {
  position: absolute;
  right: -10px;
  top: -8px;
  font-size: 14px;
}
.game_reviews h1::before {
  z-index: -2;
  position: absolute;
  content: "";
  width: 55%;
  height: 8px;
  background-color: var(--gamepad-red);
  bottom: 0px;
  left: 0;
}
.game_reviews .no_review {
  color: white;
  font-size: 2rem;
}
@media (max-width: 1380px) {
}

@media (max-width: 991.98px) {
  .game_like_ame_cards_card .card_text {
    height: 60px;
  }
  .game_details {
    height: 890px;
  }
  .game_details .game_info {
    flex-direction: column;
    height: 800px;
  }
  .game_details .game_info > div {
    width: 100%;
    height: 800px;
    margin-bottom: 20px;
  }
  .game_details .game_info > div:first-child {
    height: 30%px;
  }
  .game_like_ame_cards a {
    flex: none;
    width: 50%;
    margin-bottom: 20px;
  }
  .game_like_ame_cards {
    justify-content: start;
  }
}
@media (max-width: 767.98px) {
  .game_like_ame_cards a {
    width: 80vw;
  }
  .game_like_ame_cards_card {
    height: 400px;
  }
  .game_reviews {
    width: 100%;
    overflow: hidden;
  }
  .review {
    margin: 10px 0;
    box-sizing: border-box;
  }
  .game_like_ame_cards {
    justify-content: center;
  }
}
@media (max-width: 575.98px) {
  .game_details > h1 {
    font-size: 25px;
  }
  .games_like h1 {
    font-size: 20px;
  }
  /* .info_col_2_other_lines {
  } */
  .game_like_ame_cards a {
    width: 93vw;
  }
  .arrow-left,
  .arrow-right {
    display: block;
  }
  .game_reviews .no_review {
    font-size: 1.5rem;
  }
  .game_like_ame_cards {
    overflow-y: scroll;
    width: 100%;
    flex-wrap: nowrap;
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
  }
  .game_details {
    height: 1100px;
  }
  .game_details .game_info {
    flex-direction: column;
    height: 1100px;
  }
  .game_details .game_info .info_col_2 {
    font-size: 14px;
  }
  .game_reviews > h2 {
    font-size: 24px;
  }
}

